2007-08-01  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: extend GLib.Value
	* vapi/gtk+-2.0.vala, vapi/packages/gtk+-2.0/gtk+-2.0.metadata,
	  vapigen/valagidlparser.vala: Gtk.TreeModel fixes
	* vapi/gtksourceview-2.0.vala, vapi/packages/gtksourceview-2.0/: add
	  GtkSourceView bindings

2007-07-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vapi/atk.vala,
	  vapi/gio-standalone.vala, vapi/gstreamer-0.10.vala,
	  vapi/gtk+-2.0.vala,
	  vapi/packages/gstreamer-0.10/gstreamer-0.10-custom.vala,
	  vapi/packages/gtk+-2.0/gtk+-2.0-custom.vala,
	  vapigen/valagidlparser.vala: use abstract instead of virtual methods
	  in generated interfaces

2007-07-30  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratormethod.vala: support array length parameters
	  in virtual methods

2007-07-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix warning when defining abstract
	  properties

2007-07-29  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valacodegenerator.vala: mini fix: remove unnecessray cast in
	  visit_switch_statement to remove an invalid cast GType warning

2007-07-28  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/parser.y: add check to report an error on invalid method_header
	  and method_body presence combinations
	* vala/valamethod.vala: add `is_imported' property

2007-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* doc/building.txt: Added some documentation about how to build your
	own Vala

2007-07-27  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-07-27  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.2 release

2007-07-27  Jürg Billeter  <j@bitron.ch>

	* Makefile.am, README, configure.ac, gee/Makefile.am,
	  gee/arraylist.vala, gee/collection.vala, gee/hashmap.vala,
	  gee/hashset.vala, gee/iterable.vala, gee/iterator.vala, gee/list.vala,
	  gee/map.vala, gee/readonlycollection.vala, gee/readonlylist.vala,