@@ -1,3 +1,8 @@
+2007-08-05  Jürg Billeter  <j@bitron.ch>
+
+	* vapi/Makefile.am, vapi/gtkmozembed.vala: add GtkMozEmbed bindings,
+	  patch by Alberto Ruiz, fixes bug 463438
+
 2007-08-01  Jürg Billeter  <j@bitron.ch>
 
 	* vapi/glib-2.0.vala: extend GLib.Value
